--- a/css/style.css
+++ b/css/style.css
@@ -115,9 +115,7 @@ section a:hover {
 }
 
 /* List Styles */
-ul {}
-
-dl {
+ul {
     margin: 0 auto;
     padding: 20px;
     max-width: 600px;
@@ -125,15 +123,37 @@ dl {
     background-color: #F0BB78;
     box-shadow: 0px 5px 5px #543a1467;
 }
+
+li {
+    border-bottom: 1px solid #543A14;
+    padding: 10px 0;
+}
+
+li:last-child {
+    border-bottom: none;
+}
+dl {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 10px 20px; 
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    border-radius: 8px;
+    background-color: #F0BB78;
+    box-shadow: 0px 5px 5px #543a1467;
+
+}
 dl dt{
     font-size: 1.1rem;
-    /* color: #333; */
     margin-bottom: 5px;
+    align-self: center;
 }
 dl dd{
-    margin-bottom: 15px;
+    margin: 0;    
     color: #151515;
     padding-left: 15px;
+    line-height: 1.6;
     border-left: 3px solid #543A14;
 }
 
