--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,59 @@
 /* General Styles */
 body {
     margin: 0;
-    background-color: #FFF0DC;
+    background-color: #c0c9be;
+    font-size: large;
 }
 
-/*
-    colors: FFF0DC
-            F0BB78
-            543A14
-            131010
-*/
 
 /* Nav Styles */
 nav {
-    background-color: #F0BB78;
-    box-shadow: 0px 5px 5px #543A14;
+    background-color: #7B8D6A;
+    box-shadow: 0px 5px 5px #384031c3;
     text-align: center;
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    padding: 0 10px;
 }
 
-nav p, nav a {}
+nav p, nav a {
+    font-size: 20px;
+    font-family: "Charm", sans-serif;
+    font-weight: bold;
 
-nav a {}
+}
 
-nav a:hover {}
+nav a {
+    color: black;
+    text-decoration: none;
+
+}
+
+nav a:hover {
+    color: white;
+}
 
 /* Footer Styles */
 footer {
     display: flex;
     justify-content: center;
     gap: 10px;
-    box-shadow: 0px -3px 5px #543A14;
-    background-color: #F0BB78;
+    box-shadow: 0px -3px 5px #384031c3;
+    background-color: #7f916c;
+    padding: 5px 0;
+    font-family: "Charm", sans-serif;
+    font-weight: bold;
 }
 
-footer a {}
+footer a {
+    color: black;
+    text-decoration: none;
+    font-size: 20px;
+}
 
-footer a:hover {}
+footer a:hover {
+    color: white;
+}
 
 /* Splash Section */
 .splash {
@@ -47,31 +62,40 @@ footer a:hover {}
     align-items: center;
 }
 
+.info-img {
+    display: flex;
+    align-items: center;
+    margin: 0 20px;
+    gap: 10px;
+}
+
 .splash h1 {
     font-family: "Mulish", sans-serif;
     font-weight: 700;
+    font-size: 40px;
 }
 
 .splash img {
     border-radius: 12px;
+    
 
 }
 .splash .addy {
     text-align: center;
-    background-color: #F0BB78;
+    background-color: #7B8D6A;
     border-radius: 12px;
     padding: 10px;
+    max-width: 629.875px;
+    margin-bottom: 10px;
 }
 
 .splash .intro{
-    background-color: #F0BB78;
+    background-color: #7B8D6A;
     max-width: 629.88px;
     text-align: center;
     border-radius: 12px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px;
 }
-
 /* Horizontal Rules */
 hr {
     border-color: #131010;
@@ -94,9 +118,6 @@ section h2 {
 }
 
 
-.education .courses {
-    text-align: center;
-}
 
 /* Paragraph Styles */
 section p {
@@ -116,12 +137,12 @@ section a:hover {
 
 /* List Styles */
 ul {
-    margin: 0 auto;
+    margin: 0 20px;
     padding: 20px;
     max-width: 600px;
     border-radius: 10px;
-    background-color: #F0BB78;
-    box-shadow: 0px 5px 5px #543a1467;
+    background-color: #7B8D6A;
+    box-shadow: 5px 5px 5px #38403167;
 }
 
 li {
@@ -137,11 +158,11 @@ dl {
     grid-template-columns: 1fr 2fr;
     gap: 10px 20px; 
     max-width: 800px;
-    margin: 20px auto;
+    margin: 20px;
     padding: 20px;
     border-radius: 8px;
-    background-color: #F0BB78;
-    box-shadow: 0px 5px 5px #543a1467;
+    background-color: #7B8D6A;
+    box-shadow: 5px 5px 5px #543a1467;
 
 }
 dl dt{
@@ -158,13 +179,44 @@ dl dd{
 }
 
 /* Project Section */
-.three-col {}
+.three-col {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));;
+    gap: 20px;
+    margin: 20px;
+}
 
-.card {}
+.card ul {
+    margin: 5px;
+}
+.card {
+    background-color: #aeb1af;
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 5px 5px 5px #543a1467;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
 
-.card img {}
+.card:hover {
+    transform: scale(1.05);
+    background-color: #dadada;
+}
 
-.card h3 {}
+.card img {
+    border-radius: 8px;
+    width: 90%;
+    
+}
+
+.card h3 {
+    font-family: "Charm", sans-serif;
+    font-weight: bold;
+    font-size: 26px;
+    margin: 16px;
+}
 
 /* Contact Page Styles */
 .one-col {}
